work on i2p support

--- a/onionr/static-data/index.html
+++ b/onionr/static-data/index.html
@@ -1,5 +1,5 @@
 <h1>This is an Onionr Node</h1>
 
-<p>The content on this server is not necessarily created or intentionally stored by the owner of the software.</p>
+<p>The content on this server is not necessarily created or intentionally stored by the owner of the server.</p>
 
 <p>To learn more about Onionr, see the website at <a href="https://onionr.voidnet.tech/">https://Onionr.VoidNet.tech/</a></p>
